tests/parser/should_pass/maps.csp
m1 = (| 0 => 1 |)
m2 = (| 0 => 1, 1 => 2 |)
m3 = (| |)
