tests/parser/should_fail/extra_closing_brackets.csp
P = card(inter({0,2,3}, {1,2,4})))
